[package]
name = "latency-after"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
splay-safe-rs = { git = "https://github.com/seekstar/splay-safe-rs", version = "0.7.8" }
serde_json_lenient = "^0.1.8"
rev_lines = "0.3"
