[package]
name = "twitter-to-plain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-queue = { git = "https://github.com/seekstar/serde-queue", version = "^0.1.1" }
serde = { version = "^1.0.198", features = ["derive"] }
